--- a/api/package.json
+++ b/api/package.json
@@ -12,10 +12,14 @@
 		"@koa/multer": "^3.0.2",
 		"@koa/router": "^12.0.0",
 		"@types/multer": "^1.4.12",
+		"dotenv": "^16.4.7",
+		"form-data": "^4.0.2",
 		"koa": "^2.14.0",
 		"koa-body": "^6.0.1",
 		"koa-bodyparser": "^4.4.1",
-		"multer": "^1.4.5-lts.2"
+		"multer": "^1.4.5-lts.2",
+		"node-fetch": "^2.7.0",
+		"tus-js-client": "^4.3.1"
 	},
 	"devDependencies": {
 		"@types/koa": "^2.13.0",
